<!--
  ~ Created by James Donald Patrizi on 11/18/17 11:04 AM
  ~ Copyright (c) 2017. All rights reserved.
  ~ This application is distributed under the terms of the GNU General Public License
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~
  ~ Last modified: 11/8/17 7:57 PM
  -->

<resources>
    <string name="app_name">NetRTL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ip_addr">IP Address / Hostname</string>
    <string name="default_port_number">2832</string>
    <string name="key_ip_name">key_ip_name</string>
    <string name="key_port_name">key_port_name</string>
    <string name="key_ppm">key_pmm</string>

    <string name="action_settings">Settings</string>
    <string name="connect_setting">Connect</string>
    <string name="clear_setting">Clear</string>
    <string name="pull_setting">rtlsdrd Pull</string>
    <string name="default_setting">Defaults</string>

</resources>
