<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by James Donald Patrizi on 11/18/17 11:02 AM
  ~ Copyright (c) 2017. All rights reserved.
  ~ This application is distributed under the terms of the GNU General Public License
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~
  ~ Last modified: 11/8/17 7:56 PM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/reconnect"
        android:orderInCategory="100"
        android:title="@string/connect_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear"
        android:orderInCategory="100"
        android:title="@string/clear_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/pull"
        android:orderInCategory="100"
        android:title="@string/pull_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/default_settings"
        android:orderInCategory="100"
        android:title="@string/default_setting"
        app:showAsAction="never" />
</menu>
