<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by James Donald Patrizi on 11/18/17 11:04 AM
  ~ Copyright (c) 2017. All rights reserved.
  ~ This application is distributed under the terms of the GNU General Public License
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~
  ~ Last modified: 11/7/17 9:23 PM
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:key="@string/key_ip_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="Enter IP Address (0.0.0)"
        android:title="IP Address" />
    <EditTextPreference
        android:defaultValue="@string/default_port_number"
        android:key="@string/key_port_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="Default Port: 2832"
        android:title="Port #" />
</PreferenceScreen>